...
    <string name="app_name">CipherPass</string>
    <string name="service_label">CipherPass</string>
    <string name="pass_notset_caption">Please set a password to encrypt the database. The password should be at least 6 characters long. Choose a random sequence of characters, not a dictionary word and do not write it down. If you lose it, you won\'t be able to recover your data. </string>
    <string name="pass_not_set_send_pass">Set password</string>
    <string name="pass_set_send_pass">UNLOCK DATABASE</string>
    <string name="passphrase_hint">Password</string>
    <string name="pass_incorect">The password you entered is not valid.</string>
    <string name="error_setting_pass">An error occurred while setting the password.</string>
    <string name="passphrase_retype_hint">Retype password</string>
    <string name="pass_no_match">The passwords entered do not match.</string>
    <string name="pass_empty">Password cannot be empty</string>
    <string name="one_more_backpress">Press the back button one more time to exit.</string>
    <string name="settings_menu_item">Settings</string>
    <string name="settings_insert_pass_title">Password required</string>
    <string name="settings_insert_pass_message">Please insert your password:</string>
    <string name="system_lock_next">Next</string>
    <string name="system_lock_finish">Finish</string>
...
    <string name="auth_subtitle">Authentication required</string>
    <string name="change_pass_dialog_title">Change password</string>
    <string name="act_pass_hint">Actual password</string>
    <string name="new_pass_hint">New password</string>
    <string name="new_pass_retype_hint">Retype new password</string>
    <string name="change_pass_ok">Successfully changed the password.</string>
    <string name="change_pass_error">Error while changing password.</string>
    <string name="act_pass_empty">Actual password cannot be empty.</string>
    <string name="hash_change_success">The hash function was successfully changed</string>
    <string name="hash_change_error">Error changing the hash function.</string>
    <string name="enter_pass">Enter password:</string>
    <string name="new_entry">New entry</string>
    <string name="addedit_name">Entry name</string>
...
    <string name="privacy_policy">Privacy policy</string>
    <string name="priv_pol_intro">There are two situations when %s collects and sends data over the internet:</string>
    <string name="priv_pol_1">1. When the switch preference \"Crash reports\" is ON and an app crash happens, some data useful for debugging is compiled in a crash report which is anonymously sent to developer. This data include the app version, the device model, the device brand, the Android version, the stack trace, the device capabilities, the logcat extras if available, the settings of the app
    <string name="priv_pol2">2. When the switch preference "\Usage data\" is ON, the developer is notified when the user installs or updates the app and also when the user opens the app. This data is anonymous and is used only for statistics (i.e, how hany people installed the app, how many people currently use the app, what Android versions they use, in what countries is the app installed more fr

    <!-- Preference keys, entry names, entry values, titles, summaries-->
    <string name="applock_key">applock</string>
    <string name="applock_title">Authentication type</string>
    <string name="applock_passwd_value">passwd</string>
    <string name="applock_system_value">system</string>
    <string name="applock_nolock_value">none</string>
    <string name="applock_passwd_name">Ask for password</string>
    <string name="applock_system_name">Use system authentication</string>
    <string name="applock_none_name">No authentication</string>

    <string name="change_pass_title">Change master password</string>
    <string name="changepass_key">changepass</string>

    <string name="hash_type_key">hash</string>
    <string name="hash_type_title">Hash function</string>
    <string name="hash_type_summary">The cryptographic function used for storing the app password.</string>
    <string name="hash_type_md5_name">MD5 (fast - low security)</string>
...
